Adding schema validation for every routes
